CR projects and updated DTO structure