@@ -2,7 +2,9 @@ package com.volport.core.service;
 
 import com.volport.core.dto.ProjectDTO;
 import com.volport.core.exceptions.ProjectAlreadyExistsException;
+import com.volport.core.model.Partner;
 import com.volport.core.model.Project;
+import com.volport.core.model.Volunteer;
 import com.volport.core.repository.ProjectRepository;
 import org.modelmapper.ModelMapper;
 import org.slf4j.Logger;
@@ -11,11 +13,9 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class ProjectServiceImpl implements ProjectService {
-
 
     private static final Logger LOGGER = LoggerFactory.getLogger(ProjectServiceImpl.class);
 
@@ -26,9 +26,21 @@ public class ProjectServiceImpl implements ProjectService {
 
     @Override
     public List<ProjectDTO> getAll() {
-        return projectRepository.findAll().stream()
-                .map(element -> modelMapper.map(element, ProjectDTO.class))
-                .collect(Collectors.toList());
+        return projectRepository
+                .findAll()
+                .stream()
+                .map(project -> ProjectDTO.builder()
+                        .id(project.getId())
+                        .name(project.getName())
+                        .description(project.getDescription())
+                        .volunteerIds(project.getVolunteers().stream()
+                                .map(Volunteer::getId)
+                                .toList())
+                        .partnerIds(project.getPartners().stream()
+                                .map(Partner::getId)
+                                .toList())
+                        .build())
+                .toList();
     }
 
     @Override
@@ -39,4 +51,5 @@ public class ProjectServiceImpl implements ProjectService {
         }
         return modelMapper.map(projectRepository.save(modelMapper.map(projectDTO, Project.class)), ProjectDTO.class);
     }
+
 }
